# Zephyr-Application

./: .gitignore  README.md
AppDev-example/: CMakeLists.txt
AppDev-example/include/: utils.h
AppDev-example/src/: main.c  utils.c
CustomBoard-example/: CMakeLists.txt
Hardware Files/ESP-ExtBoard/: #auto_saved_files#  ESP-ExtBoard.kicad_pcb  ESP-ExtBoard.kicad_prl  ESP-ExtBoard.kicad_pro  ESP-ExtBoard.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Interrupt-example/src/: main.c
OLED-example/: CMakeLists.txt  README.md  esp32.overlay
OS-example/: CMakeLists.txt  README.md  prj.conf
OS-example/src/: main copy.txt  main.c
Sensor-example/: CMakeLists.txt  esp32.overlay  prj.conf
Sensor-example/src/: main.c
Shell-example/: CMakeLists.txt  README.md  prj.conf  rpi_pico_w.overlay
Shell-example/src/: main.c
UART-Example/: CMakeLists.txt
UART-Example/src/: main.c
app/: CMakeLists.txt  README.md  esp32.overlay  prj.conf  stm32f469i_disco.overlay  stm32f4_disco.overlay
app-copy/: CMakeLists.txt  esp32.overlay  prj.conf
app-copy/include/: AccelThread.h  DisplayThread.h
app-copy/src/: AccelThread.c  DisplayThread.c  main.c
app/src/: main.c
bme280/boards/: esp32.overlay
bme280/src/: main.c
example-standalone-inferencing-zephyr/: CMakeLists (copy).md  CMakeLists.txt  esp32.overlay  prj.conf
example-standalone-inferencing-zephyr/src/: main.cpp  main.md
fade_led/src/: main.c
hello_world_rpi_pico/: prj.conf
hello_world_rpi_pico/src/: main.c
serial-example/: CMakeLists.txt
tutorial/: CMakeLists.txt  frdm_k64f.overlay
(+24 files in other folders)
